--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
     "fire": "^0.55.1",
+    "firebase": "^7.9.2",
     "mapbox-gl": "^1.8.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.11.1",
