--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/android": "^1.5.0",
     "@capacitor/core": "1.5.0",
     "@ionic-native/core": "^5.21.6",
+    "@ionic-native/firebase": "^5.22.0",
     "@ionic-native/geolocation": "^5.21.6",
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
@@ -30,6 +31,7 @@
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "cordova-android": "8.1.0",
+    "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
     "fire": "^0.55.1",
@@ -79,7 +81,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "android"
