--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^5.0.3",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "cordova-android": "^8.1.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
     "fire": "^0.55.1",
@@ -77,6 +78,8 @@
       },
       "cordova-plugin-ionic-keyboard": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   }
 }
