--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
     "@ionic/angular": "^5.0.3",
+    "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "cordova-android": "^8.1.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
     "fire": "^0.55.1",
     "firebase": "^7.9.2",
@@ -76,7 +78,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
