--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
-    "@angular/fire": "^5.4.2",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
@@ -28,12 +28,13 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "angularfire": "^2.3.0",
     "cordova-android": "^8.1.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
     "fire": "^0.55.1",
-    "firebase": "^7.9.2",
+    "firebase": "^7.13.2",
     "mapbox-gl": "^1.8.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.11.1",
