usando observables, tengo problemas para vericar si el usuario esta logueado.

--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
-    "angularfire2": "^5.4.2",
     "cordova-android": "^8.1.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
     "fire": "^0.55.1",
+    "firebase": "^7.13.2",
     "mapbox-gl": "^1.8.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.11.1",
