--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ionic-native/android-permissions": "^5.24.0",
     "@ionic-native/core": "^5.21.6",
     "@ionic-native/geolocation": "^5.21.6",
     "@ionic-native/splash-screen": "^5.21.6",
@@ -80,7 +81,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "android"
