--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "angularfire": "^2.3.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-android-permissions": "^1.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
