--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "core-js": "^2.5.4",
     "fire": "^0.55.1",
     "firebase": "^7.14.0",
+    "ionic-rating": "^2.0.0",
     "mapbox-gl": "^1.8.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.11.1",
