--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@turf/distance": "^6.0.1",
     "angularfire": "^2.3.0",
     "cordova-android": "^8.1.0",
     "cordova-plugin-android-permissions": "^1.0.2",
