--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "^5.21.6",
     "@ionic-native/geolocation": "^5.24.0",
     "@ionic-native/location-accuracy": "^5.24.0",
+    "@ionic-native/screen-orientation": "^5.24.0",
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
     "@ionic/angular": "^5.0.3",
@@ -36,8 +37,10 @@
     "cordova-plugin-android-permissions": "^1.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
+    "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "^4.2.2",
     "fire": "^0.55.1",
     "firebase": "^7.14.0",
     "ionic-rating": "^2.0.0",
@@ -91,7 +94,8 @@
       "cordova-plugin-geolocation": {},
       "cordova-plugin-request-location-accuracy": {
         "PLAY_SERVICES_LOCATION_VERSION": "16.+"
-      }
+      },
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android"
