--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/screen-orientation": "^5.24.0",
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
+    "@ionic-native/vibration": "^5.25.0",
     "@ionic/angular": "^5.0.3",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
@@ -39,6 +40,7 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
+    "cordova-plugin-vibration": "^3.1.1",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
@@ -95,7 +97,8 @@
       "cordova-plugin-request-location-accuracy": {
         "PLAY_SERVICES_LOCATION_VERSION": "16.+"
       },
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-vibration": {}
     },
     "platforms": [
       "android"
