--- a/package.json
+++ b/package.json
@@ -25,19 +25,25 @@
     "@ionic-native/core": "^5.21.6",
     "@ionic-native/geolocation": "^5.24.0",
     "@ionic-native/location-accuracy": "^5.24.0",
+    "@ionic-native/native-geocoder": "^5.26.0",
+    "@ionic-native/network": "^5.26.0",
     "@ionic-native/screen-orientation": "^5.24.0",
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
     "@ionic-native/vibration": "^5.25.0",
     "@ionic/angular": "^5.0.3",
     "@ionic/storage": "^2.2.0",
+    "@mapbox/mapbox-gl-directions": "^4.0.3",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "@turf/distance": "^6.0.1",
     "angularfire": "^2.3.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-nativegeocoder": "^3.4.1",
+    "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-vibration": "^3.1.1",
@@ -98,7 +104,9 @@
         "PLAY_SERVICES_LOCATION_VERSION": "16.+"
       },
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android"
