--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/core": "^5.21.6",
     "@ionic-native/geolocation": "^5.24.0",
     "@ionic-native/in-app-browser": "^5.27.0",
+    "@ionic-native/ionic-webview": "^5.28.0",
     "@ionic-native/keyboard": "^5.26.0",
     "@ionic-native/location-accuracy": "^5.24.0",
     "@ionic-native/native-geocoder": "^5.26.0",
@@ -100,9 +101,7 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
+      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-android-permissions": {},
