filtrosEventos: Instalacion de package data-fns #npm install date-fns Implementa filtro por fecha Pendiente: Pruebas Mejorar Estilos

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cordova-plugin-vibration": "^3.1.1",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
+    "date-fns": "^2.28.0",
     "es6-promise-plugin": "^4.2.2",
     "fire": "^0.55.1",
     "firebase": "^7.14.0",
