--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@capacitor/android": "3.4.1",
+    "@capacitor/core": "^3.4.1",
     "@ionic-native/android-permissions": "^5.24.0",
     "@ionic-native/call-number": "^5.27.0",
     "@ionic-native/core": "^5.21.6",
@@ -70,6 +72,7 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@capacitor/cli": "^3.4.1",
     "@ionic/angular-toolkit": "^2.2.0",
     "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "~3.3.8",
