--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic-native/screen-orientation": "^5.24.0",
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
+    "@ionic-native/text-to-speech": "^5.36.0",
     "@ionic-native/vibration": "^5.25.0",
     "@ionic/angular": "^5.0.3",
     "@ionic/storage": "^2.2.0",
@@ -82,6 +83,7 @@
     "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-tts": "^0.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -121,7 +123,8 @@
       "cordova-plugin-network-information": {},
       "mx.ferreyra.callnumber": {},
       "call-number": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-tts": {}
     },
     "platforms": [
       "android",
