soluconado instalando cordova-plugin-androidx cordova-plugin-androidx-adapter

--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
@@ -124,7 +126,9 @@
       "mx.ferreyra.callnumber": {},
       "call-number": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-tts": {}
+      "cordova-plugin-tts": {},
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
       "android",
