--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "@angular/router": "~8.2.14",
     "@awesome-cordova-plugins/android-permissions": "^5.39.1",
     "@awesome-cordova-plugins/core": "^5.39.1",
+    "@awesome-cordova-plugins/geolocation": "^5.39.1",
+    "@awesome-cordova-plugins/location-accuracy": "^5.39.1",
     "@ionic-native/call-number": "^5.27.0",
     "@ionic-native/core": "^5.21.6",
-    "@ionic-native/geolocation": "^5.24.0",
     "@ionic-native/in-app-browser": "^5.27.0",
     "@ionic-native/ionic-webview": "^5.28.0",
     "@ionic-native/keyboard": "^5.26.0",
-    "@ionic-native/location-accuracy": "^5.24.0",
     "@ionic-native/native-geocoder": "^5.26.0",
     "@ionic-native/network": "^5.26.0",
     "@ionic-native/screen-orientation": "^5.24.0",
@@ -115,9 +115,7 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-request-location-accuracy": {
-        "PLAY_SERVICES_LOCATION_VERSION": "16.+"
-      },
+      "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-screen-orientation": {},
       "cordova-plugin-vibration": {},
       "cordova-plugin-nativegeocoder": {
