--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@angular/router": "~8.2.14",
     "@awesome-cordova-plugins/android-permissions": "^5.39.1",
     "@awesome-cordova-plugins/core": "^5.39.1",
-    "@awesome-cordova-plugins/geolocation": "^5.39.1",
+    "@awesome-cordova-plugins/diagnostic": "^5.39.1",
     "@awesome-cordova-plugins/location-accuracy": "^5.39.1",
     "@ionic-native/call-number": "^5.27.0",
     "@ionic-native/core": "^5.21.6",
+    "@ionic-native/geolocation": "^5.36.0",
     "@ionic-native/in-app-browser": "^5.27.0",
     "@ionic-native/ionic-webview": "^5.28.0",
     "@ionic-native/keyboard": "^5.26.0",
@@ -35,7 +36,6 @@
     "@ionic-native/splash-screen": "^5.21.6",
     "@ionic-native/status-bar": "^5.21.6",
     "@ionic-native/text-to-speech": "^5.36.0",
-    "@ionic-native/vibration": "^5.25.0",
     "@ionic/angular": "^5.0.3",
     "@ionic/storage": "^2.2.0",
     "@mapbox/mapbox-gl-directions": "^4.0.3",
@@ -48,13 +48,11 @@
     "cordova-ios": "^5.1.1",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.0.2",
-    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-inappbrowser": "^4.0.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
-    "cordova-plugin-vibration": "^3.1.1",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
     "date-fns": "^2.28.0",
@@ -82,6 +80,7 @@
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -114,10 +113,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-android-permissions": {},
-      "cordova-plugin-geolocation": {},
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-vibration": {},
       "cordova-plugin-nativegeocoder": {
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Acceder a su ubicación para determinar su distancia a los lugares"
       },
@@ -127,7 +124,11 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-tts": {},
       "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova.plugins.diagnostic": {},
+      "cordova-plugin-geolocation": {
+        "GPS_REQUIRED": "true"
+      }
     },
     "platforms": [
       "android",
