--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@awesome-cordova-plugins/location-accuracy": "^5.39.1",
     "@ionic-native/call-number": "^5.27.0",
     "@ionic-native/core": "^5.21.6",
-    "@ionic-native/geolocation": "^5.36.0",
+    "@ionic-native/geolocation": "^5.24.0",
     "@ionic-native/in-app-browser": "^5.27.0",
     "@ionic-native/ionic-webview": "^5.28.0",
     "@ionic-native/keyboard": "^5.26.0",
@@ -80,7 +80,7 @@
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -126,9 +126,7 @@
       "cordova-plugin-androidx": {},
       "cordova-plugin-androidx-adapter": {},
       "cordova.plugins.diagnostic": {},
-      "cordova-plugin-geolocation": {
-        "GPS_REQUIRED": "true"
-      }
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "android",
