--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/router": "~8.2.14",
     "@awesome-cordova-plugins/android-permissions": "^5.39.1",
     "@awesome-cordova-plugins/core": "^5.39.1",
-    "@awesome-cordova-plugins/diagnostic": "^5.39.1",
     "@awesome-cordova-plugins/location-accuracy": "^5.39.1",
     "@ionic-native/call-number": "^5.27.0",
     "@ionic-native/core": "^5.21.6",
+    "@ionic-native/diagnostic": "^5.36.0",
     "@ionic-native/geolocation": "^5.24.0",
     "@ionic-native/in-app-browser": "^5.27.0",
     "@ionic-native/ionic-webview": "^5.28.0",
@@ -87,6 +87,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-tts": "^0.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova.plugins.diagnostic": "^6.1.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -125,8 +126,11 @@
       "cordova-plugin-tts": {},
       "cordova-plugin-androidx": {},
       "cordova-plugin-androidx-adapter": {},
-      "cordova.plugins.diagnostic": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova.plugins.diagnostic": {
+        "ANDROIDX_VERSION": "1.0.0",
+        "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
+      }
     },
     "platforms": [
       "android",
